# oneMath

./: CMakeLists.txt  README.md
.github/workflows/: pr-arm.yml  pr-lint.yml  pr-x86.yml  pr.yml  px-x86.yml
cmake/: FindARMPL.cmake  FindOpenRNG.cmake  FindcuRAND.cmake
cmake/mkl/: MKLConfig.cmake  MKLConfigVersion.cmake
docs/: building_the_project_with_adaptivecpp.rst  building_the_project_with_dpcpp.rst
examples/rng/device/: CMakeLists.txt
examples/rng/device/include/: rng_example_helper.hpp
examples/rng/run_time_dispatching/: CMakeLists.txt
include/oneapi/math/: types.hpp
include/oneapi/math/detail/: backend_selector_predicates.hpp  backends.hpp  backends_table.hpp  get_device_id.hpp
include/oneapi/math/rng/: engines.hpp
include/oneapi/math/rng/detail/openrng/: onemath_rng_openrng.hpp
include/oneapi/math/rng/device/: engines.hpp
include/oneapi/math/rng/device/detail/: bits_impl.hpp  exponential_impl.hpp  mcg31m1_impl.hpp  mcg59_impl.hpp  mrg32k3a_impl.hpp  philox4x32x10_impl.hpp  uniform_bits_impl.hpp  uniform_impl.hpp
src/: CMakeLists.txt  config.hpp.in
src/blas/backends/armpl/: armpl_batch.cxx  armpl_level3.cxx
src/blas/backends/cublas/: CMakeLists.txt  cublas_helper.hpp  cublas_scope_handle_adaptivecpp.cpp  cublas_scope_handle_adaptivecpp.hpp  cublas_task.hpp
src/blas/backends/generic/: CMakeLists.txt  generic_common.hpp  generic_level3.cxx
src/blas/backends/rocblas/: CMakeLists.txt  rocblas_helper.hpp  rocblas_scope_handle_adaptivecpp.cpp  rocblas_task.hpp
src/dft/: execute_helper_generic.hpp
src/dft/backends/cufft/: backward.cpp  commit.cpp  execute_helper.hpp  forward.cpp
src/dft/backends/rocfft/: commit.cpp  execute_helper.hpp
src/rng/backends/: CMakeLists.txt
src/rng/backends/armpl/: CMakeLists.txt  armpl_common.hpp
src/rng/backends/curand/: curand_task.hpp  mrg32k3a.cpp  philox4x32x10.cpp
src/rng/backends/mklcpu/: cpu_common.hpp
src/rng/backends/openrng/: CMakeLists.txt  mkl_vsl.h
src/rng/backends/rocrand/: mrg32k3a.cpp  philox4x32x10.cpp  rocrand_task.hpp
tests/unit_tests/: CMakeLists.txt  main_test.cpp
tests/unit_tests/blas/: CMakeLists.txt
tests/unit_tests/dft/source/: descriptor_tests.cpp
tests/unit_tests/include/: test_helper.hpp
tests/unit_tests/lapack/include/: lapack_common.hpp
tests/unit_tests/rng/device/include/: count_adaptor_test.hpp  rng_device_test_common.hpp
tests/unit_tests/rng/device/moments/: CMakeLists.txt
tests/unit_tests/rng/device/service/: CMakeLists.txt  count_adaptor.cpp
